--- a/index.html
+++ b/index.html
@@ -118,16 +118,19 @@
   </section>
 
   <div class="social-links">
-  <a href="https://open.spotify.com/artist/3uXFLBjPAFL3bzeuqMgOqO" target="_blank" aria-label="Spotify">
-    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/spotify.svg" alt="Spotify">
-  </a>
-  <a href="https://twitter.com/Laywast3" target="_blank" aria-label="Twitter">
-    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="Twitter">
-  </a>
-  <a href="https://soundcloud.com/laywast3" target="_blank" aria-label="SoundCloud">
-    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/soundcloud.svg" alt="SoundCloud">
-  </a>
-</div>
+    <a href="https://open.spotify.com/artist/3uXFLBjPAFL3bzeuqMgOqO" target="_blank" aria-label="Spotify">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/spotify.svg" alt="Spotify">
+    </a>
+    <a href="https://twitter.com/Laywast3" target="_blank" aria-label="Twitter">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="Twitter">
+    </a>
+    <a href="https://soundcloud.com/laywast3" target="_blank" aria-label="SoundCloud">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/soundcloud.svg" alt="SoundCloud">
+    </a>
+    <a href="https://www.youtube.com/@lxywaste" target="_blank" aria-label="YouTube">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/youtube.svg" alt="YouTube">
+    </a>
+  </div>
 
   <section class="music-player">
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/3uXFLBjPAFL3bzeuqMgOqO?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -146,5 +149,8 @@
   <footer>
     &copy; 2025 Lay Waste. All rights reserved.
   </footer>
+</body>
+</html>
+
 </body>
 </html>
